--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "multer": "^1.4.3",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
     "pg": "^8.7.1",
@@ -85,4 +86,3 @@
     "jest-sonar-reporter"
   ]
 }
-
