Add cors module and fix a typo for getUser

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=sonar-ue3dw24-gabriel-denajar
-sonar.projectName=Gabriel DENAJAR UE3DW24-22
+sonar.projectName=DENAJAR Gabriel UE3DW24-22
 sonar.projectVersion= 1.0.0
 sonar.sources=.
 sonar.exclusions=tests/*,seeders/*,migrations/*,coverage/**,node_modules/**,app.js,index.js
